# BrainflowCytonEEGWrapper

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: prerelease.yml  release.yml  test.yml
BrainflowCyton/: __init__.py  eeg.py
tests/: __init__.py  test_eeg.py
