[project]
name = "BrainflowCyton"
version = "0.2.1"
description = "Python wrapper for BrainFlow API + Cyton SDK for collecting realtime or offline (SDCard) EEG, EMG, EKG data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "zeyus", email = "dev@zeyus.com" }
]
keywords = ["eeg", "emg", "ekg", "brainflow", "cyton", "biosignals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sounddevice>=0.4.6",
    "brainflow>=5.0.0",
    "samplerate>=0.2.0",
    "pyxdf>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/zeyus-research/BrainflowCytonEEGWrapper"
"Bug Tracker" = "https://github.com/zeyus-research/BrainflowCytonEEGWrapper/issues"
Repository = "https://github.com/zeyus-research/BrainflowCytonEEGWrapper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["BrainflowCyton"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["BrainflowCyton"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
